# MCFG-parser

./: .gitignore  example.py  pyproject.toml
src/mcfg_parser/: __init__.py  abparser.py  grammar.py  parser.py  tree.py
